Bug 393287 - Krita crashes when creating a new file or opening an existing one
Summary: Krita crashes when creating a new file or opening an existing one
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-19 12:15 UTC by sr.loire
Modified: 2018-05-09 13:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kritacrash logs (278.17 KB, text/plain)
2018-04-19 12:15 UTC, sr.loire
Details
system info (6.86 KB, text/plain)
2018-05-04 07:28 UTC, sr.loire
Details
crashlogs (48.71 KB, text/plain)
2018-05-04 07:29 UTC, sr.loire
Details
krita crashlog (81.47 KB, text/plain)
2018-05-07 08:39 UTC, sr.loire
Details
system info (6.88 KB, text/plain)
2018-05-07 08:40 UTC, sr.loire
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sr.loire 2018-04-19 12:15:17 UTC
Created attachment 112110 [details]
kritacrash logs

Machine:
Microsoft Windows 10 Pro
Versión	10.0.16299
Intel(R) Core(TM) i5-4460  CPU @ 3.20GHz, 3201 Mhz, 4 cores.
Nvidia Quadro K620

Krita 3.3 worked fine on a Windows 7 installation, but Krita 4.0 and 4.0.1 crashes when creating or opening a file. I did a clean upgrade to Windows 10 and the problem presists. Happens with graphics acceleration ANGLE, DirectX and Off.
Comment 1 Scott Petrovic 2018-04-19 16:38:39 UTC
Usually this has to do with an old configuration file from Krita 3.x hanging around. 

Can you try to clear those files. 
https://docs.krita.org/KritaFAQ#Resetting_Krita_configuration
Comment 2 sr.loire 2018-04-20 08:26:45 UTC
Deleted the kritarc and kritadisplayrc files and still crashes the same.

I tried, on the same machine, booting a Manjaro KDE Live USB with free drivers and krita 4.0.1 intalled from the repositories worked fine. Could't test it with non-free drivers because the live image doesn't load correctly.
Comment 3 Halla Rempt 2018-04-28 09:43:19 UTC
Please try to get a crash log. It is fairly certain that this is a problem with your setup, of course, because hundreds of thousands of people use Krita on Windows 10 without problems, but it would be good to have the following information so we could start guessing what's up:

* crash log (https://docs.krita.org/Dr._Mingw_debugger)
* system information for bug reports (from the dialog in the help menu)
* whether you have any security software installed other than Windows Defender
Comment 4 sr.loire 2018-05-04 07:28:36 UTC
Created attachment 112409 [details]
system info
Comment 5 sr.loire 2018-05-04 07:29:19 UTC
Created attachment 112410 [details]
crashlogs
Comment 6 sr.loire 2018-05-04 07:31:11 UTC
I attached the crashlogs where i opened an existing file and tried to create a new one and the system info from the krita help dialog.

I have Zone Alarm installed.
Comment 7 Halla Rempt 2018-05-04 10:08:52 UTC
Hm... The crash seems to happen in the grid docker. let's see if I can find the cause.
Comment 8 Halla Rempt 2018-05-04 10:11:00 UTC
Okay, I don't understand how this could happen -- apparently there is a canvas showing the document, but no document, but I can work around  this.
Comment 9 Halla Rempt 2018-05-04 10:13:14 UTC
Git commit b0275f3e0e1e19df0a306fa147f48b7079df92a1 by Boudewijn Rempt.
Committed on 04/05/2018 at 10:12.
Pushed by rempt into branch 'master'.

Check pointers before dereferencing

M  +1    -1    plugins/dockers/griddocker/griddocker_dock.cpp

https://commits.kde.org/krita/b0275f3e0e1e19df0a306fa147f48b7079df92a1
Comment 10 Halla Rempt 2018-05-04 10:13:41 UTC
You should be able to test this fix in the next nightly build: https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/
Comment 11 Halla Rempt 2018-05-04 14:01:09 UTC
Git commit 18760637769be2b546313c10645f32a1123d3041 by Boudewijn Rempt.
Committed on 04/05/2018 at 12:54.
Pushed by rempt into branch 'krita/4.0'.

Check pointers before dereferencing
(cherry picked from commit b0275f3e0e1e19df0a306fa147f48b7079df92a1)

M  +1    -1    plugins/dockers/griddocker/griddocker_dock.cpp

https://commits.kde.org/krita/18760637769be2b546313c10645f32a1123d3041
Comment 12 sr.loire 2018-05-07 08:39:20 UTC
Created attachment 112461 [details]
krita crashlog
Comment 13 sr.loire 2018-05-07 08:40:27 UTC
Created attachment 112462 [details]
system info
Comment 14 sr.loire 2018-05-07 08:41:48 UTC
No Luck with the latest night-build T_T (krita-nightly-x64-v4.0.0.51-1033-g1d6a7e2ec6-setup.exe)

I attach the new system info and crashlogs.
Comment 15 Halla Rempt 2018-05-07 08:50:23 UTC
Yes, the latest nightly build doesn't have the fix yet. Tomorrow's should have it.
Comment 16 sr.loire 2018-05-09 10:10:51 UTC
Ok, with today build the problem is solved.

Great work!
Comment 17 Halla Rempt 2018-05-09 13:44:07 UTC
Ah, phew!