Check pointers before dereferencing

BUG:393287
(cherry picked from commit b0275f3e0e1e19df0a306fa147f48b7079df92a1)